--- a/style.css
+++ b/style.css
@@ -1,42 +1,158 @@
-*{
-    padding: 0;
-    margin: 0;
+* {
+  padding: 0;
+  margin: 0;
 }
 
-#header-menu{
-    height: 80% !important; 
+/* .container a:hover {
+  color: #fb5d5d;
+  text-decoration: none;
+  color: black;
+  font-family: "Nunito Sans", sans-serif;
+} */
+
+#header-menu {
+  height: 80% !important;
 }
 
-.menu-item{
-    text-align: center;
+.menu-item {
+  text-align: center;
 }
 
-.menu-item li{
-    display: inline-block;
-    float: none;
-    list-style-type: none;
-    margin-left: 15px;
-    font-family: Nunito,sans-serif;
-    font-size: 2vh;
+.menu-item li {
+  display: inline-block;
+  float: none;
+  list-style-type: none;
+  margin-left: 15px;
+  font-family: Nunito, sans-serif;
+  font-size: 2vh;
 }
 
-.page-name{
-    width: 100%;
-    height: 300px;
-    background-color: #fcf6f6;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+.page-name {
+  width: 100%;
+  height: 300px;
+  background-color: #fcf6f6;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
-.page-name p a{
-    text-decoration: none;
-    color: black;
-    font-family: 'Nunito Sans', sans-serif;
-
+.page-name p a {
+  text-decoration: none;
+  color: black;
+  font-family: "Nunito Sans", sans-serif;
+  transition: all 0.1s linear;
 }
 
-.page-name p a:hover{
-    color: #fb5d5d;
+.page-name p a:hover {
+  color: #fb5d5d;
+}
+
+.page-product {
+  flex-direction: column;
+  margin-top: 7%;
+  margin-left: 3%;
+}
+
+.main-box {
+  margin-bottom: 20px;
+}
+
+.main-image {
+  width: 450px;
+  height: 450px;
+}
+
+.small-boxes {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.small-image {
+  width: 90;
+  height: 100px;
+  cursor: pointer;
+}
+
+.product-rating a {
+  font-size: 8%;
+  color: #9f9e9e;
+  text-decoration: none;
+  font-family: "Nunito Sans", sans-serif;
+  transition: all 0.1s linear;
+}
+
+.product-rating a:hover {
+  color: #fb5d5d;
+}
+
+.product-description {
+  color: #9f9e9e;
+  font-size: 16px;
+}
+
+.bCard {
+  background-color: #fb5d5d;
+  color: #fff;
+  border-radius: 5px;
+  height: 50px;
+  width: 180px;
+  border: none;
+  font-size: 12px;
+  font-family: "Nunito", sans-serif;
+  font-weight: bold;
+  transition: all 0.2s linear;
+}
+
+.bCard:hover {
+  background-color: black;
+  cursor: pointer;
+}
+
+.bTwoButton {
+  background-color: #3d3d3d;
+  border-radius: 6px;
+  height: 50px;
+  width: 50px;
+  border: none;
+  transition: all 0.1s linear;
+}
+
+.bTwoButton:hover {
+  background-color: black;
+  cursor: pointer;
+}
+
+#numupdown {
+  width: 80px;
+  text-align: center;
+  background-color: #3d3d3d;
+  border: none;
+  color: #fff;
+  border-radius: 5px;
+}
+
+.product-details a {
+  font-size: 0.9rem;
+  text-decoration: none;
+  margin-left: 10px;
+  color: #9f9e9e;
+}
+
+.product-details a:hover {
+  color: #fb5d5d;
+}
+
+.product-details {
+  font-size: 1rem;
+}
+
+
+.social{
+    color: #fb5d5d;   
+}
+
+.social i{
+    transition: all 0.2s linear;
 }
